--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^1.1.0",
+    "grunt-cli": "^1.3.2",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^2.2.0",
     "grunt-contrib-jshint": "~0.10.0",
@@ -12,6 +13,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-sass": "^2.0.0",
     "grunt-ts": "^6.0.0-beta.16",
+    "protractor": "^5.4.2",
     "typescript": "^2.6.2"
   }
 }
